tests/macros/checkbox/mask.stderr
error: option `mask` does not exist for kind `checkbox`
 --> $DIR/mask.rs:2:46
  |
2 |     let q = discourse::questions![Checkbox { mask: todo!() }];
  |                                              ^^^^
