tests/macros/checkbox/mask.rs
fn main() {
    let q = discourse::questions![Checkbox { mask: todo!() }];
}
